--- a/button1.html
+++ b/button1.html
@@ -244,7 +244,7 @@
 
 <body>
 
-  <button class="btn small pink rounded threeD" type="button" onclick="navigate()"> home</button>
+  <button class="btn medium pink rounded threeD" type="button" onclick="navigate()"> home</button>
   
   <script>
     function navigate() {
