--- a/homebuttonblue.html
+++ b/homebuttonblue.html
@@ -244,7 +244,7 @@
 
 <body>
 
-  <button class="btn medium blue rounded threeD" type="button" onclick="navigate()"> home</button>
+  <button class="btn mid blue rounded threeD" type="button" onclick="navigate()"> home</button>
   
   <script>
     function navigate() {
